--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 <body>
 <div class="containr-fluid bannerbg1">
       <div class="col-5 nav">
-          <a href="home.html">Home</a>
+          <a href="index.html">Home</a>
           <a href="coffee.html">Coffee</a>
           <a href="plantanation.html">Plantanation</a>
           <a href="page.html">Page</a>
@@ -35,7 +35,7 @@
     </div>
     <div class="cl"></div>
     <div class="dot-menu">
-       <a href="home.html">Home</a>
+       <a href="index.html">Home</a>
       <a href="coffee.html">Coffee</a>
       <a href="plantanation.html">Plantanation</a>
       <a href="page.html">Pages</a>
