--- a/shop1.html
+++ b/shop1.html
@@ -13,7 +13,7 @@
 <div class="container-fluid bannerbg1">
   
     <div class="col-8"> 
-    <a href="home.html">&#8635;</a>
+    <a href="index.html">&#8635;</a>
      <h1>find good,<br> food around you</h1>
     </div> 
     <div class="col-4 search">
