--- a/page.html
+++ b/page.html
@@ -23,7 +23,7 @@
 <body>
 <div class="container-fluid bannerbg3">
 <div class="col-5 nav">
-          <a href="home.html">Home</a>
+          <a href="index.html">Home</a>
           <a href="coffee.html">Coffee</a>
           <a href="plantanation.html">Plantanation</a>
           <a>Page</a>
@@ -35,7 +35,7 @@
     </div>
     <div class="cl"></div>
     <div class="dot-menu">
-       <a href="home.html">Home</a>
+       <a href="index.html">Home</a>
       <a href="coffee.html">Coffee</a>
       <a href="plantanation.html">Plantanation</a>
       <a>Pages</a>
