--- a/contact.html
+++ b/contact.html
@@ -1,93 +1,97 @@
 <!doctype html>
 <html>
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width' initial-scale=1">
-<title>Untitled Document</title>
-<link rel="stylesheet" href="css/contact_style.css">
-<link rel="stylesheet" href="css/grid_style.css">
-<script type="text/javascript" language="javascript" src="js/jquery.min.js"></script>
-<script>
-   $(document).ready(function()
-                  {
-					  $(".toggle").click(function()
-					                   {
-						  $(".dot-menu").slideToggle();
-						  
-				                    })
 
-				   })
-				  </script>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width' initial-scale=1">
+    <title>Untitled Document</title>
+    <link rel="stylesheet" href="css/contact_style.css">
+    <link rel="stylesheet" href="css/grid_style.css">
+    <script type="text/javascript" language="javascript" src="js/jquery.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $(".toggle").click(function () {
+                $(".dot-menu").slideToggle();
+
+            })
+
+        })
+    </script>
 </head>
 
 <body>
-<div class="containr-fluid bannerbg1">
-      <div class="col-5 nav">
-          <a href="index.html">Home</a>
-          <a href="coffee.html">Coffee</a>
-          <a href="plantanation.html">Plantanation</a>
-          <a href="page.html">Page</a>
-          <a href="gallery.html">Gallery</a>
-          <a>Contact</a>
-    </div><div class="cl"></div>
-    <div class="toggle">
-      <img src="images/toggleWHITE.png" class="img-fluid bannerr">
+    <div class="containr-fluid bannerbg1">
+        <div class="col-5 nav">
+            <a href="index.html">Home</a>
+            <a href="coffee.html">Coffee</a>
+            <a href="plantanation.html">Plantanation</a>
+            <a href="page.html">Page</a>
+            <a href="gallery.html">Gallery</a>
+            <a>Contact</a>
+        </div>
+        <div class="cl"></div>
+        <div class="toggle">
+            <img src="images/toggleWHITE.png" class="img-fluid bannerr">
+        </div>
+        <div class="cl"></div>
+        <div class="dot-menu">
+            <a href="index.html">Home</a>
+            <a href="coffee.html">Coffee</a>
+            <a href="plantanation.html">Plantanation</a>
+            <a href="page.html">Pages</a>
+            <a href="gallery.html">Gallery</a>
+            <a>Contact</a>
+        </div>
+        <div class="container content1">
+            <div class="col-4 imgs">
+                <img src="images/footlogo.png" class="img-fluid line">
+            </div>
+            <div class="cl"></div>
+            <div class="col-6 para1">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas
+                    accumsan lacus vel facilisis. </p>
+            </div>
+            <div class="col-5 para2">
+                <h1>STORIES</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. </p>
+                <h2>news as our coffee</h2>
+                <form action="#" method="post" class="frm" onSubmit="validate()">
+                    <input placeholder="For Email Profile" class="email" type="email" name="email" id="email">
+                    <input type="submit" name="submit" value="SEARCH" class="btn">
+                </form>
+            </div>
+        </div>
+        <div class="cl"></div>
     </div>
-    <div class="cl"></div>
-    <div class="dot-menu">
-       <a href="index.html">Home</a>
-      <a href="coffee.html">Coffee</a>
-      <a href="plantanation.html">Plantanation</a>
-      <a href="page.html">Pages</a>
-      <a href="gallery.html">Gallery</a>
-      <a>Contact</a>
+    <div class="container-fluid footer11">
+        <div class="container ft">
+            <div class="col-8 copy">Copyright @ 2022 Herry | All Right Reserved</div>
+            <div class="col-4 images">
+                <div class="col-2 logo">
+                    <img src="images/facebook.png" class="img-fluid">
+                </div>
+                <div class="col-2 logo">
+                    <img src="images/insta.png" class="img-fluid">
+                </div>
+                <div class="col-2 logo">
+                    <img src="images/twitter.png" class="img-fluid">
+                </div>
+                <div class="col-2 logo">
+                    <img src="images/linkedin.png" class="img-fluid">
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="container content1">
-       <div class="col-4 imgs">  
-          <img src="images/footlogo.png" class="img-fluid line">
-       </div>  <div class="cl"></div>
-       <div class="col-6 para1">  
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus             commodo viverra maecenas accumsan lacus vel facilisis. </p>
-       </div>
-       <div class="col-5 para2">
-            <h1>STORIES</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
-            <h2>news as our coffee</h2>
-            <form action="#" method="post" class="frm" onSubmit="validate()">
-             <input placeholder="For Email Profile" class="email" type="email" name="email" id="email" >
-             <input type="submit" name="submit" value="SEARCH" class="btn">
-             </form>
-       </div>
-     </div>
-     <div class="cl"></div>
-</div>
-<div class="container-fluid footer11">
-	 <div class="container ft">
-		 <div class="col-8 copy">Copyright @ 2022 Herry | All Right Reserved</div>
-	      <div class="col-4 images">
-          <div class="col-2 logo">
-              <img src="images/facebook.png" class="img-fluid">
-          </div>
-          <div class="col-2 logo">
-              <img src="images/insta.png" class="img-fluid">
-          </div>
-          <div class="col-2 logo">
-              <img src="images/twitter.png" class="img-fluid">
-          </div>
-          <div class="col-2 logo">
-              <img src="images/linkedin.png" class="img-fluid">
-          </div>
-     </div>
-	 </div>
-</div>	
-<script>
-   function validate(){
-	    var em=document.getElementById("email").value;
-		 if(em=="")
-	   {
-		   alert("PLEASE FILL OUT EMAIL ID");
-	   }
-   }
-   </script>
+    <script>
+        function validate() {
+            var em = document.getElementById("email").value;
+            if (em == "") {
+                alert("PLEASE FILL OUT EMAIL ID");
+            }
+        }
+    </script>
 </body>
+
 </html>
