This reverts commit .

--- a/shop1.html
+++ b/shop1.html
@@ -30,106 +30,125 @@
           <div class="cl"></div>
      </div>
      <div class="container-fluid content1">
+          <div class="container-fluid bannerbg1">
 
-          <div class="col-12 imgs">
-               <div class="col-3 imge">
-                    <img src="images/icedcoffee.jpg" class="img-fluid pic">
-                    <div class="overlay"></div>
-                    <h1>ICED TEA</h1>
-                    <p>$1.45</p>
+               <div class="col-8">
+                    <a href="index.html">&#8635;</a>
+                    <h1>find good,<br> food around you</h1>
                </div>
-               <div class="col-3 imge">
-                    <img src="images/coldcoffee.jpg" class="img-fluid">
-                    <h1>COLD MOCHA</h1>
-                    <p>$2.99</p>
+               <div class="col-4 search">
+                    <input placeholder="SEARCH..." class="a" type="text">
                </div>
-               <div class="col-3 imge">
-                    <img src="images/cocodreams.jpg" class="img-fluid">
-                    <h1>TIRAMISU MILKSHAKE</h1>
-                    <p>$4.99</p>
-               </div>
+               <div class="cl"></div>
           </div>
+          <div class="container-fluid content1">
+               <div class="container">
+                    <h1 class="head">COLD COFFEES</h1>
 
-          <div class="cl"></div>
-     </div>
-     <div class="container-fluid content2">
-          <div class="container">
-               <h1 class="head">HOT COFFEES</h1>
-               <div class="col-12 pics">
-                    <div class="col-6 img">
-                         <img src="images/velvetcoffee.jpg" class="img-fluid">
-                         <h1>VELVET COFFEE</h1>
+               </div>
+               <div class="cl"></div>
+          </div>
+          <div class="container-fluid content1">
+
+               <div class="col-12 imgs">
+                    <div class="col-3 imge">
+                         <img src="images/icedcoffee.jpg" class="img-fluid pic">
+                         <div class="overlay"></div>
+                         <h1>ICED TEA</h1>
+                         <p>$1.45</p>
+                    </div>
+                    <div class="col-3 imge">
+                         <img src="images/coldcoffee.jpg" class="img-fluid">
+                         <h1>COLD MOCHA</h1>
+                         <p>$2.99</p>
+                    </div>
+                    <div class="col-3 imge">
+                         <img src="images/cocodreams.jpg" class="img-fluid">
+                         <h1>TIRAMISU MILKSHAKE</h1>
                          <p>$4.99</p>
                     </div>
-                    <div class="col-6 img">
-                         <img src="images/cappuccino.jpg" class="img-fluid">
-                         <h1>CAPPUCCINO</h1>
-                         <p>$1.89</p>
-                    </div>
-                    <div class="col-6 img">
-                         <img src="images/cinnomoncoffee.jpg" class="img-fluid">
-                         <h1>CINNOMON COFFEE</h1>
-                         <p>$4.56</p>
-                    </div>
-                    <div class="col-6 img">
-                         <img src="images/white.jpg" class="img-fluid">
-                         <h1>FLAT WHITE</h1>
-                         <p>$3</p>
-                    </div>
                </div>
-          </div>
-          <div class="cl"></div>
-     </div>
-     <div class="container-fluid content1">
-          <h1 class="head">PASTRIES</h1>
-          <div class="col-12 imgs">
-               <div class="col-3 imge">
-                    <img src="images/mangocheesecake.jpg" class="img-fluid">
-                    <h1>MANGO CHEESECAKE</h1>
-                    <p>$1.45</p>
-               </div>
-               <div class="col-3 imge">
-                    <img src="images/lavacake.jpg" class="img-fluid">
-                    <h1>CHOCOLAVA CAKE</h1>
-                    <p>$2.99</p>
-               </div>
-               <div class="col-3 imge">
-                    <img src="images/strawberrycheesecake.jpg" class="img-fluid">
-                    <h1>STRAWBERRY CHEESECAKE</h1>
-                    <p>$4.99</p>
-               </div>
-          </div>
 
-          <div class="cl"></div>
-     </div>
-     <div class="container-fluid content2">
-          <div class="container">
-               <h1 class="head">SNAKS</h1>
-               <div class="col-12 pics">
-                    <div class="col-6 img">
-                         <img src="images/hamburger.jpg" class="img-fluid">
-                         <h1>VEG BURGER</h1>
+               <div class="cl"></div>
+          </div>
+          <div class="container-fluid content2">
+               <div class="container">
+                    <h1 class="head">HOT COFFEES</h1>
+                    <div class="col-12 pics">
+                         <div class="col-6 img">
+                              <img src="images/velvetcoffee.jpg" class="img-fluid">
+                              <h1>VELVET COFFEE</h1>
+                              <p>$4.99</p>
+                         </div>
+                         <div class="col-6 img">
+                              <img src="images/cappuccino.jpg" class="img-fluid">
+                              <h1>CAPPUCCINO</h1>
+                              <p>$1.89</p>
+                         </div>
+                         <div class="col-6 img">
+                              <img src="images/cinnomoncoffee.jpg" class="img-fluid">
+                              <h1>CINNOMON COFFEE</h1>
+                              <p>$4.56</p>
+                         </div>
+                         <div class="col-6 img">
+                              <img src="images/white.jpg" class="img-fluid">
+                              <h1>FLAT WHITE</h1>
+                              <p>$3</p>
+                         </div>
+                    </div>
+               </div>
+               <div class="cl"></div>
+          </div>
+          <div class="container-fluid content1">
+               <h1 class="head">PASTRIES</h1>
+               <div class="col-12 imgs">
+                    <div class="col-3 imge">
+                         <img src="images/mangocheesecake.jpg" class="img-fluid">
+                         <h1>MANGO CHEESECAKE</h1>
+                         <p>$1.45</p>
+                    </div>
+                    <div class="col-3 imge">
+                         <img src="images/lavacake.jpg" class="img-fluid">
+                         <h1>CHOCOLAVA CAKE</h1>
+                         <p>$2.99</p>
+                    </div>
+                    <div class="col-3 imge">
+                         <img src="images/strawberrycheesecake.jpg" class="img-fluid">
+                         <h1>STRAWBERRY CHEESECAKE</h1>
                          <p>$4.99</p>
                     </div>
-                    <div class="col-6 img">
-                         <img src="images/pizza.jpg" class="img-fluid">
-                         <h1>VEG PIZZA</h1>
-                         <p>$6.22</p>
-                    </div>
-                    <div class="col-6 img">
-                         <img src="images/croissant.jpg" class="img-fluid">
-                         <h1>CROISSANT</h1>
-                         <p>$5.23</p>
-                    </div>
-                    <div class="col-6 img">
-                         <img src="images/sandwiches.jpg" class="img-fluid">
-                         <h1>CLUB SANDWICH</h1>
-                         <p>$4.96</p>
+               </div>
+
+               <div class="cl"></div>
+          </div>
+          <div class="container-fluid content2">
+               <div class="container">
+                    <h1 class="head">SNAKS</h1>
+                    <div class="col-12 pics">
+                         <div class="col-6 img">
+                              <img src="images/hamburger.jpg" class="img-fluid">
+                              <h1>VEG BURGER</h1>
+                              <p>$4.99</p>
+                         </div>
+                         <div class="col-6 img">
+                              <img src="images/pizza.jpg" class="img-fluid">
+                              <h1>VEG PIZZA</h1>
+                              <p>$6.22</p>
+                         </div>
+                         <div class="col-6 img">
+                              <img src="images/croissant.jpg" class="img-fluid">
+                              <h1>CROISSANT</h1>
+                              <p>$5.23</p>
+                         </div>
+                         <div class="col-6 img">
+                              <img src="images/sandwiches.jpg" class="img-fluid">
+                              <h1>CLUB SANDWICH</h1>
+                              <p>$4.96</p>
+                         </div>
                     </div>
                </div>
+               <div class="cl"></div>
           </div>
-          <div class="cl"></div>
-     </div>
 </body>
 
 </html>
